feat: add steps name

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,6 +16,12 @@ jobs:
       with:
         node-version: 16.x # 指定版本
         cache: 'yarn'
-    - run: yarn # 运行 yarn 
-    - run: yarn build # 运行 yarn build
-    - run: ls -a # 查看打包后的目录文件 
+
+    - name: Install dependencies
+      run: yarn # 运行 yarn 
+
+    - name: Run build 
+      run: yarn build # 运行 yarn build
+
+    - name: view directory files
+      run: ls -a # 查看打包后的目录文件
