--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "pm2": "pm2 start yarn --name 'demo' --interpreter bash -- start "
   },
   "dependencies": {
     "next": "12.1.6",
